tests/expectations/execution/sig_verify.out
Error while running execution tests:
Error [EPAR0370005]: expected '}', '@', 'record', 'constructor', 'fn', 'mapping', 'storage' -- found 'struct'
    --> compiler-test:33:5
     |
  33 |     struct foo {
     |     ^^^^^^


Errors:
